BasePrice Criteria Fields Addition in PriceGrid

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -32,3 +32,4 @@ log4j.logger.org.mule.transport.http=ERROR
 
 # Your custom classes
 log4j.logger.com.asi.*=DEBUG
+log4j.logger.org.springframework.*=DEBUG
