--- a/pom.xml
+++ b/pom.xml
@@ -196,12 +196,12 @@
 	            
 	            <version>2.2</version>
 	            <configuration>
-	            	<!--<port>9090</port>  
-	            	<serverXml>D:\\WebSites\\muleservice\\Servers\\tcat-config\\server.xml</serverXml>
+	            	<port>9090</port>  
+	            <!-- 	<serverXml>D:\\WebSites\\muleservice\\Servers\\tcat-config\\server.xml</serverXml>
 	                <tomcatUsers>D:\\WebSites\\muleservice\\Servers\\tcat-config\\conf/tomcat-users.xml</tomcatUsers>
 	                
 					<tomcatLoggingFile>D:\\temp\\tomcat_server.log</tomcatLoggingFile>
-					-->
+				 -->
 					<addContextWarDependencies>true</addContextWarDependencies>
 	                <extraDependencies>
 	                    <dependency>
