Added Security and changed List Service API Added Basic Auth - with password as "password" (ROLE_CUSTOMER)
For Price Grid
http://{host-name:port}/productService/api/3879/pid/1472/price/801433316

For All prices
http://{host-name:port}/productService/api/3879/pid/1472

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 	-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/application-config.xml</param-value>
+        <param-value>classpath:spring/application-config.xml, classpath:spring/application-security.xml</param-value>
     </context-param>
 
     <listener>
