--- a/pom.xml
+++ b/pom.xml
@@ -39,19 +39,29 @@
         <derbyVersion>10.10.1.1</derbyVersion>
 	</properties>
 	
-	<dependencies>
-<dependency>
-	<groupId>log4j</groupId>
-	<artifactId>log4j</artifactId>
-	<version>1.2.17</version>
-</dependency>
-				    <dependency>
-				        <groupId>org.slf4j</groupId>
-				        <artifactId>slf4j-simple</artifactId>
-				        <version>1.6.4</version>
-				    </dependency>            
-
-
+	<dependencies>	    
+	      <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-framework-bom</artifactId>
+	        <version>4.0.2.RELEASE</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>            
+		<dependency> 
+		  <groupId>org.slf4j</groupId>
+		  <artifactId>slf4j-log4j12</artifactId>
+		  <version>1.7.7</version>
+		</dependency>
+		<dependency> 
+		  <groupId>ch.qos.logback</groupId>
+		  <artifactId>logback-classic</artifactId>
+		  <version>1.0.13</version>
+		</dependency>
 	    <dependency>
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-context</artifactId>
