--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<jsp.version>2.2</jsp.version>
 		<jstl.version>1.2</jstl.version>
 		<servlet.version>2.5</servlet.version>
-		
+		<project.build.directory>D:\WebSites\service\MuleService</project.build.directory>
 
 		<!-- Spring -->
 		<spring-framework.version>4.0.3.RELEASE</spring-framework.version>
@@ -201,7 +201,6 @@
 			<artifactId>ehcache</artifactId>
 			<version>2.8.1</version>
 		</dependency>
-		
 	</dependencies>	
 	
     <scm>
@@ -216,7 +215,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>2.5.1</version>
 		         <executions>
 		           <execution>
 		             <goals>
@@ -231,11 +230,6 @@
                     
                 </configuration>
             </plugin>		
-	        <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.2</version>
-			</plugin>
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.6</version>
@@ -248,52 +242,149 @@
 					</execution>
 				</executions>
 			</plugin>
-<plugin>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.1</version>
-            <configuration>
-                <path>/productService</path>
-                <extraDependencies>
-				   <dependency>
-				        <groupId>org.slf4j</groupId>
-				        <artifactId>slf4j-api</artifactId>
-				        <version>1.7.1</version>
-				    </dependency>
-				
-				    <dependency>
-				        <groupId>org.slf4j</groupId>
-				        <artifactId>slf4j-simple</artifactId>
-				        <version>1.6.4</version>
-				    </dependency>
-				
-				    <dependency>
-				        <groupId>org.slf4j</groupId>
-				        <artifactId>slf4j-log4j12</artifactId>
-				        <version>1.7.1</version>
-				    </dependency>
-                    <dependency>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>jul-to-slf4j</artifactId>
-                        <version>1.7.5</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>ch.qos.logback</groupId>
-                        <artifactId>logback-classic</artifactId>
-                        <version>1.0.7</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>ch.qos.logback</groupId>
-                        <artifactId>logback-core</artifactId>
-                        <version>1.0.7</version>
-                    </dependency>
-                </extraDependencies>
-            </configuration>
-            
-        </plugin>			
+			<plugin>
+	            <groupId>org.apache.tomcat.maven</groupId>
+	            <artifactId>tomcat7-maven-plugin</artifactId>
+	            <version>2.1</version>
+	            <configuration>
+	                <path>/productService</path>
+	                <extraDependencies>
+					   <dependency>
+					        <groupId>org.slf4j</groupId>
+					        <artifactId>slf4j-api</artifactId>
+					        <version>1.7.1</version>
+					    </dependency>
+					
+					    <dependency>
+					        <groupId>org.slf4j</groupId>
+					        <artifactId>slf4j-simple</artifactId>
+					        <version>1.6.4</version>
+					    </dependency>
+					
+					    <dependency>
+					        <groupId>org.slf4j</groupId>
+					        <artifactId>slf4j-log4j12</artifactId>
+					        <version>1.7.1</version>
+					    </dependency>
+	                    <dependency>
+	                        <groupId>org.slf4j</groupId>
+	                        <artifactId>jul-to-slf4j</artifactId>
+	                        <version>1.7.5</version>
+	                    </dependency>
+	                    <dependency>
+	                        <groupId>ch.qos.logback</groupId>
+	                        <artifactId>logback-classic</artifactId>
+	                        <version>1.0.7</version>
+	                    </dependency>
+	                    <dependency>
+	                        <groupId>ch.qos.logback</groupId>
+	                        <artifactId>logback-core</artifactId>
+	                        <version>1.0.7</version>
+	                    </dependency>
+	                </extraDependencies>
+	            </configuration>
+        	</plugin>			
+			 <plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>jaxb2-maven-plugin</artifactId>
+			    <version>1.6</version>
+			    <executions>
+			        <execution>
+			        	<id>schemagen</id>
+			            <goals>
+			                <goal>schemagen</goal>
+			            </goals>
+			            <configuration>		            
+							<transformSchemas>
+		                        <transformSchema>
+		                            <uri>http://www.asicentral.com/schema/product</uri>
+		                            <toPrefix>asi</toPrefix>
+		                            <toFile>product.xsd</toFile>
+		                        </transformSchema>
+		                    </transformSchemas>
+		                    <includes>
+		                    	<include></include>
+		                    </includes>
+			            </configuration>
+			        </execution>
+			    </executions>
+			</plugin>        	
+ 	        <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.2</version>
+			</plugin>
         </plugins>
         </pluginManagement>	
 	</build>
+	<profiles>
+		<profile>
+		    <id>jdk7-fix</id>
+		    <activation>
+		        <file><exists>${java.home}/../lib/tools.jar</exists></file>
+		    </activation>
+		    <build>
+		        <pluginManagement>
+		            <plugins>
+		                <plugin>
+		                    <groupId>com.sun.tools.jxc.maven2</groupId>
+		                    <artifactId>maven-jaxb-schemagen-plugin</artifactId>
+						     <executions>
+						         <execution>
+						            <phase>generate-resources</phase>
+						            <goals>
+						               <goal>generate</goal>
+						            </goals>
+						         </execution>
+						     </executions>
+						     <configuration>
+
+						        <includes>
+						             <include>com/asi/service/product/vo/*.java</include>
+						        </includes>
+						        <schemas>
+						             <schema>
+						                 <namespace>http://www.asicentral.com/schema/product</namespace>
+						                 <file>product.xsd</file>
+						             </schema>
+						        </schemas>
+						        <verbose>true</verbose>
+						     </configuration>						     
+		                    <dependencies>
+		                        <dependency>
+		                            <groupId>com.sun</groupId>
+		                            <artifactId>tools</artifactId>
+		                            <version>1.7</version>
+		                            <scope>system</scope>
+		                            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+		                        </dependency>
+						         <dependency>
+						             <groupId>javax.xml.bind</groupId>
+						             <artifactId>jaxb-api</artifactId>
+						             <version>2.2</version>
+						         </dependency>
+						         <dependency>
+						             <groupId>com.sun.xml.bind</groupId>
+						             <artifactId>jaxb-xjc</artifactId>
+						             <version>2.2</version>
+						         </dependency>
+						         <dependency>
+						             <groupId>com.sun.xml.bind</groupId>
+						             <artifactId>jaxb-impl</artifactId>
+						             <version>2.2</version>
+						         </dependency>
+						         <dependency>
+						             <groupId>com.sun.xml.bind</groupId>
+						             <artifactId>jaxb-xjc</artifactId>
+						             <version>2.2</version>
+						         </dependency>
+		                    </dependencies>
+		                </plugin>
+		            </plugins>
+		        </pluginManagement>
+		    </build>
+		</profile>	
+</profiles>
 	<repositories>
 		<repository>
 			<id>spring-release</id>
