--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,8 @@
 	            <version>2.1</version>
 	            <configuration>
 	                <path>/productService</path>
+					<url>http://127.0.0.1:8085/manager</url>
+					<server>TomcatServer</server>                
 	                <extraDependencies>
 					   <dependency>
 					        <groupId>org.slf4j</groupId>
@@ -313,6 +315,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.2</version>
+		        <configuration>
+		          <webappDirectory>D:/tomcat-7.0.52/webapps</webappDirectory>
+		        </configuration>				
 			</plugin>
         </plugins>
         </pluginManagement>	
