--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,7 @@
 	            <version>2.1</version>
 	            <configuration>
 	                <path>/productService</path>
-					<url>http://asi-tfsbld-03.asinetwork.local:8085/manager</url>
+					<url>http://asi-tfsbld-03.asinetwork.local:8085/manager/text</url>
 					<server>TomcatServer</server>                
 	                <extraDependencies>
 					   <dependency>
