--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 		<!-- Generic properties -->
 		<java.version>1.7</java.version> 
+		<project>test</project>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
@@ -16,7 +17,7 @@
 		<jsp.version>2.2</jsp.version>
 		<jstl.version>1.2</jstl.version>
 		<servlet.version>2.5</servlet.version>
-		<project.build.directory>D:\WebSites\service\MuleService</project.build.directory>
+		<project.build.directory>D:\\WebSites\\service\\MuleService</project.build.directory>
 
 		<!-- Spring -->
 		<spring-framework.version>4.0.3.RELEASE</spring-framework.version>
@@ -292,24 +293,28 @@
 			    <version>1.6</version>
 			    <executions>
 			        <execution>
-			        	<id>schemagen</id>
 			            <goals>
 			                <goal>schemagen</goal>
 			            </goals>
-			            <configuration>		            
-							<transformSchemas>
-		                        <transformSchema>
-		                            <uri>http://www.asicentral.com/schema/product</uri>
-		                            <toPrefix>asi</toPrefix>
-		                            <toFile>product.xsd</toFile>
-		                        </transformSchema>
-		                    </transformSchemas>
+			            <phase>generate-resources</phase>
+			            
+			            <configuration>
 		                    <includes>
-		                    	<include></include>
-		                    </includes>
+		                    	<include>**\*.java</include>
+		                    </includes>			            
+						      <args>  
+						       <param>-npa</param>  
+						      </args>			            
+							<transformSchemas>
+								<transformSchema>
+									<uri>http://www.asicentral.com/schema/product</uri>
+									<toPrefix>asi</toPrefix>
+									<toFile>product.xsd</toFile>
+								</transformSchema>
+							</transformSchemas>			            	            
 			            </configuration>
 			        </execution>
-			    </executions>
+			    </executions>    
 			</plugin>        	
  	        <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -405,4 +410,12 @@
 			<url>http://repo.maven.apache.org/maven2</url>
 		</repository>
 	</repositories>
+	<pluginRepositories>
+	 <pluginRepository>
+	  <id>maven2-repository.dev.java.net</id>
+	  <name>Java.net Repository for Maven</name>
+	  <url>http://download.java.net/maven/2/</url>
+	  <layout>default</layout>
+	 </pluginRepository>
+	</pluginRepositories>
 </project>
