--- a/src/main/resources/users.properties
+++ b/src/main/resources/users.properties
@@ -1,5 +1,5 @@
 user.admin.pass=password
-user.admin.role=ROLE_CUSTOMER
+user.admin.role=ROLE_ADMIN
 user.customer1.pass=password
 user.customer1.role=ROLE_CUSTOMER
 user.customer2.pass=password
