--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 		<!-- Generic properties -->
 		<java.version>1.7</java.version> 
-		<project>test</project>
+		<project>>productService</project>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
@@ -211,7 +211,6 @@
         <connection>scm:git:git@github.com:mansar/service.git</connection>
         <developerConnection>scm:git:git@github.com:mansar/service.git</developerConnection>
         <url>https://github.com/mansar/service</url>
-      <tag>productService-0.0.1</tag>
   </scm>	
 	<build>
 	<pluginManagement>
@@ -322,7 +321,19 @@
  	        <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.2</version>				
+				<version>2.2</version>	
+	            <configuration>
+	                <manifest>
+	                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+	                </manifest>
+	                <archive>
+	                    <manifestEntries>
+	                        <Specification-Title>${project.name}</Specification-Title>
+	                        <Specification-Version>${project.version}</Specification-Version>
+	                        <Implementation-Version>${build.number}</Implementation-Version>
+	                    </manifestEntries>
+	                </archive>
+	            </configuration>						
 			</plugin>
         </plugins>
         </pluginManagement>	
