iso and logging

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Default log level
-log4j.rootCategory=INFO, file
+log4j.rootCategory=debug, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%-5p %d [%t] %c: %m%n
@@ -16,5 +16,5 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:
 
 log4j.logger.org.springframework.aop.framework.autoproxy=DEBUG, console
 
-log4j.logger.org.springframework.*=INFO, file
-log4j.logger.com.asi.*=INFO, file
+log4j.logger.org.springframework.*=debug, file
+log4j.logger.com.asi.*=debug, file
