--- a/pom.xml
+++ b/pom.xml
@@ -232,7 +232,7 @@
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
-                    <encoding>UTF-8</encoding>
+                    <encoding>ISO-8859-1</encoding>
                     
                 </configuration>
             </plugin>		
