--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,11 @@
 # Default log level
-log4j.rootCategory=debug, console
+log4j.rootCategory=debug, console,file
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%-5p %d [%t] %c: %m%n
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=D:/tmp/logs/muleproductexport.log
+log4j.appender.file.File=/tmp/logs/muleproductexport.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
@@ -15,6 +15,6 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:
 ################################################
 
 log4j.logger.org.springframework.aop.framework.autoproxy=DEBUG, console
-
+log4j.logger.net.sf.ehcache.*=DEBUG, console
 log4j.logger.org.springframework.*=debug, file
 log4j.logger.com.asi.*=debug, file
