--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,21 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.asi.service</groupId>
-  <artifactId>productService</artifactId>
-  <version>0.0.1</version>
-  <packaging>war</packaging>
-  
-    <properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.asi.service</groupId>
+	<artifactId>productService</artifactId>
+	<version>0.0.1</version>
+	<packaging>war</packaging>
+
+	<properties>
 
 		<!-- Generic properties -->
-		<java.version>1.7</java.version> 
-		<project>test</project>
+		<java.version>1.7</java.version>
+		<project>
+			test
+		</project>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		
+
 		<!-- Web -->
 		<jsp.version>2.2</jsp.version>
 		<jstl.version>1.2</jstl.version>
@@ -33,42 +36,47 @@
 
 		<!-- Test -->
 		<junit.version>4.11</junit.version>
-        <jdk5Name>J2SE-1.7</jdk5Name>
-        <jdk.version>1.7</jdk.version>
-        <antVersion>1.7.0</antVersion>
-        <antlrVersion>3.1.1</antlrVersion>
-        <derbyVersion>10.10.1.1</derbyVersion>
+		<jdk5Name>J2SE-1.7</jdk5Name>
+		<jdk.version>1.7</jdk.version>
+		<antVersion>1.7.0</antVersion>
+		<antlrVersion>3.1.1</antlrVersion>
+		<derbyVersion>10.10.1.1</derbyVersion>
 	</properties>
-	
-	<dependencies>	    
-	      <dependency>
-	        <groupId>org.springframework</groupId>
-	        <artifactId>spring-framework-bom</artifactId>
-	        <version>4.0.2.RELEASE</version>
-	        <type>pom</type>
-	        <scope>import</scope>
-	      </dependency>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-framework-bom</artifactId>
+			<version>4.0.2.RELEASE</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.8</version>
+		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency>            
-		<dependency> 
-		  <groupId>org.slf4j</groupId>
-		  <artifactId>slf4j-log4j12</artifactId>
-		  <version>1.7.7</version>
 		</dependency>
-		<dependency> 
-		  <groupId>ch.qos.logback</groupId>
-		  <artifactId>logback-classic</artifactId>
-		  <version>1.0.13</version>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.7</version>
 		</dependency>
-	    <dependency>
-	        <groupId>org.springframework</groupId>
-	        <artifactId>spring-context</artifactId>
-	        <version>${spring-framework.version}</version>
-	    </dependency>
-            	    
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
@@ -175,230 +183,232 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
-	    <dependency>
-	        <groupId>org.springframework.security</groupId>
-	        <artifactId>spring-security-web</artifactId>
-	        <version>${spring.security.version}</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>org.springframework.security</groupId>
-	        <artifactId>spring-security-config</artifactId>
-	        <version>${spring.security.version}</version>
-	    </dependency>		
-		 <dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sourceforge.jexcelapi</groupId>
 			<artifactId>jxl</artifactId>
 			<version>2.6.12</version>
 		</dependency>
 		<dependency>
-		    <groupId>net.sf.supercsv</groupId>
-		    <artifactId>super-csv</artifactId>
-		    <version>2.1.0</version>
+			<groupId>net.sf.supercsv</groupId>
+			<artifactId>super-csv</artifactId>
+			<version>2.1.0</version>
 		</dependency>
 		<dependency>
-		    <groupId>net.sf.supercsv</groupId>
-		    <artifactId>super-csv-dozer</artifactId>
-		    <version>2.1.0</version>
- 		    
+			<groupId>net.sf.supercsv</groupId>
+			<artifactId>super-csv-dozer</artifactId>
+			<version>2.1.0</version>
+
 		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
 			<version>2.8.1</version>
 		</dependency>
-	</dependencies>	
-	
-    <scm>
-        <connection>scm:git:git@github.com:mansar/service.git</connection>
-        <developerConnection>scm:git:git@github.com:mansar/service.git</developerConnection>
-        <url>https://github.com/mansar/service</url>
-      <tag>productService-0.0.1</tag>
-  </scm>	
+	</dependencies>
+
+	<scm>
+		<connection>scm:git:git@github.com:mansar/service.git</connection>
+		<developerConnection>scm:git:git@github.com:mansar/service.git</developerConnection>
+		<url>https://github.com/mansar/service</url>
+		<tag>productService-0.0.1</tag>
+	</scm>
 	<build>
-	<pluginManagement>
-		<plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-		         <executions>
-		           <execution>
-		             <goals>
-		                <goal>compile</goal>
-		             </goals>
-		           </execution>
-		         </executions>
-                <configuration>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
-                    <encoding>ISO-8859-1</encoding>
-                    
-                </configuration>
-            </plugin>		
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.6</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-	            <groupId>org.apache.tomcat.maven</groupId>
-	            <artifactId>tomcat7-maven-plugin</artifactId>
-	            <version>2.1</version>
-	            <configuration>
-	                <path>/productService</path>
-					<url>http://asi-tfsbld-03.asinetwork.local:8085/manager/text</url>
-					<server>TomcatServer</server>                
-	                <extraDependencies>
-					   <dependency>
-					        <groupId>org.slf4j</groupId>
-					        <artifactId>slf4j-api</artifactId>
-					        <version>1.7.1</version>
-					    </dependency>
-					
-					    <dependency>
-					        <groupId>org.slf4j</groupId>
-					        <artifactId>slf4j-simple</artifactId>
-					        <version>1.6.4</version>
-					    </dependency>
-					
-					    <dependency>
-					        <groupId>org.slf4j</groupId>
-					        <artifactId>slf4j-log4j12</artifactId>
-					        <version>1.7.1</version>
-					    </dependency>
-	                    <dependency>
-	                        <groupId>org.slf4j</groupId>
-	                        <artifactId>jul-to-slf4j</artifactId>
-	                        <version>1.7.5</version>
-	                    </dependency>
-	                    <dependency>
-	                        <groupId>ch.qos.logback</groupId>
-	                        <artifactId>logback-classic</artifactId>
-	                        <version>1.0.7</version>
-	                    </dependency>
-	                    <dependency>
-	                        <groupId>ch.qos.logback</groupId>
-	                        <artifactId>logback-core</artifactId>
-	                        <version>1.0.7</version>
-	                    </dependency>
-	                </extraDependencies>
-	            </configuration>
-        	</plugin>			
-			 <plugin>
-			    <groupId>org.codehaus.mojo</groupId>
-			    <artifactId>jaxb2-maven-plugin</artifactId>
-			    <version>1.6</version>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>schemagen</goal>
-			            </goals>
-			            <phase>generate-resources</phase>
-			            
-			            <configuration>
-		                    <includes>
-		                    	<include>**\*.java</include>
-		                    </includes>			            
-						      <args>  
-						       <param>-npa</param>  
-						      </args>			            
-							<transformSchemas>
-								<transformSchema>
-									<uri>http://www.asicentral.com/schema/product</uri>
-									<toPrefix>asi</toPrefix>
-									<toFile>product.xsd</toFile>
-								</transformSchema>
-							</transformSchemas>			            	            
-			            </configuration>
-			        </execution>
-			    </executions>    
-			</plugin>        	
- 	        <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.2</version>
-		        <configuration>
-		          <webappDirectory>D:/tomcat-7.0.52/webapps</webappDirectory>
-		        </configuration>				
-			</plugin>
-        </plugins>
-        </pluginManagement>	
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.5.1</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<source>${jdk.version}</source>
+						<target>${jdk.version}</target>
+						<encoding>ISO-8859-1</encoding>
+
+					</configuration>
+				</plugin>
+				<plugin>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>2.6</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>integration-test</goal>
+								<goal>verify</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.1</version>
+					<configuration>
+						<path>/productService</path>
+						<url>http://asi-tfsbld-03.asinetwork.local:8085/manager/text</url>
+						<server>TomcatServer</server>
+						<extraDependencies>
+							<dependency>
+								<groupId>org.slf4j</groupId>
+								<artifactId>slf4j-api</artifactId>
+								<version>1.7.1</version>
+							</dependency>
+
+							<dependency>
+								<groupId>org.slf4j</groupId>
+								<artifactId>slf4j-simple</artifactId>
+								<version>1.6.4</version>
+							</dependency>
+
+							<dependency>
+								<groupId>org.slf4j</groupId>
+								<artifactId>slf4j-log4j12</artifactId>
+								<version>1.7.1</version>
+							</dependency>
+							<dependency>
+								<groupId>org.slf4j</groupId>
+								<artifactId>jul-to-slf4j</artifactId>
+								<version>1.7.5</version>
+							</dependency>
+							<dependency>
+								<groupId>ch.qos.logback</groupId>
+								<artifactId>logback-classic</artifactId>
+								<version>1.0.7</version>
+							</dependency>
+							<dependency>
+								<groupId>ch.qos.logback</groupId>
+								<artifactId>logback-core</artifactId>
+								<version>1.0.7</version>
+							</dependency>
+						</extraDependencies>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>jaxb2-maven-plugin</artifactId>
+					<version>1.6</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>schemagen</goal>
+							</goals>
+							<phase>generate-resources</phase>
+
+							<configuration>
+								<includes>
+									<include>**\*.java</include>
+								</includes>
+								<args>
+									<param>-npa</param>
+								</args>
+								<transformSchemas>
+									<transformSchema>
+										<uri>http://www.asicentral.com/schema/product</uri>
+										<toPrefix>asi</toPrefix>
+										<toFile>product.xsd</toFile>
+									</transformSchema>
+								</transformSchemas>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.2</version>
+					<configuration>
+						<webappDirectory>D:/tomcat-7.0.52/webapps</webappDirectory>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	<profiles>
 		<profile>
-		    <id>jdk7-fix</id>
-		    <activation>
-		        <file><exists>${java.home}/../lib/tools.jar</exists></file>
-		    </activation>
-		    <build>
-		        <pluginManagement>
-		            <plugins>
-		                <plugin>
-		                    <groupId>com.sun.tools.jxc.maven2</groupId>
-		                    <artifactId>maven-jaxb-schemagen-plugin</artifactId>
-						     <executions>
-						         <execution>
-						            <phase>generate-resources</phase>
-						            <goals>
-						               <goal>generate</goal>
-						            </goals>
-						         </execution>
-						     </executions>
-						     <configuration>
+			<id>jdk7-fix</id>
+			<activation>
+				<file>
+					<exists>${java.home}/../lib/tools.jar</exists>
+				</file>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>com.sun.tools.jxc.maven2</groupId>
+							<artifactId>maven-jaxb-schemagen-plugin</artifactId>
+							<executions>
+								<execution>
+									<phase>generate-resources</phase>
+									<goals>
+										<goal>generate</goal>
+									</goals>
+								</execution>
+							</executions>
+							<configuration>
 
-						        <includes>
-						             <include>com/asi/service/product/vo/*.java</include>
-						        </includes>
-						        <schemas>
-						             <schema>
-						                 <namespace>http://www.asicentral.com/schema/product</namespace>
-						                 <file>product.xsd</file>
-						             </schema>
-						        </schemas>
-						        <verbose>true</verbose>
-						     </configuration>						     
-		                    <dependencies>
-		                        <dependency>
-		                            <groupId>com.sun</groupId>
-		                            <artifactId>tools</artifactId>
-		                            <version>1.7</version>
-		                            <scope>system</scope>
-		                            <systemPath>${java.home}/../lib/tools.jar</systemPath>
-		                        </dependency>
-						         <dependency>
-						             <groupId>javax.xml.bind</groupId>
-						             <artifactId>jaxb-api</artifactId>
-						             <version>2.2</version>
-						         </dependency>
-						         <dependency>
-						             <groupId>com.sun.xml.bind</groupId>
-						             <artifactId>jaxb-xjc</artifactId>
-						             <version>2.2</version>
-						         </dependency>
-						         <dependency>
-						             <groupId>com.sun.xml.bind</groupId>
-						             <artifactId>jaxb-impl</artifactId>
-						             <version>2.2</version>
-						         </dependency>
-						         <dependency>
-						             <groupId>com.sun.xml.bind</groupId>
-						             <artifactId>jaxb-xjc</artifactId>
-						             <version>2.2</version>
-						         </dependency>
-		                    </dependencies>
-		                </plugin>
-		            </plugins>
-		        </pluginManagement>
-		    </build>
-		</profile>	
-</profiles>
+								<includes>
+									<include>com/asi/service/product/vo/*.java</include>
+								</includes>
+								<schemas>
+									<schema>
+										<namespace>http://www.asicentral.com/schema/product</namespace>
+										<file>product.xsd</file>
+									</schema>
+								</schemas>
+								<verbose>true</verbose>
+							</configuration>
+							<dependencies>
+								<dependency>
+									<groupId>com.sun</groupId>
+									<artifactId>tools</artifactId>
+									<version>1.7</version>
+									<scope>system</scope>
+									<systemPath>${java.home}/../lib/tools.jar</systemPath>
+								</dependency>
+								<dependency>
+									<groupId>javax.xml.bind</groupId>
+									<artifactId>jaxb-api</artifactId>
+									<version>2.2</version>
+								</dependency>
+								<dependency>
+									<groupId>com.sun.xml.bind</groupId>
+									<artifactId>jaxb-xjc</artifactId>
+									<version>2.2</version>
+								</dependency>
+								<dependency>
+									<groupId>com.sun.xml.bind</groupId>
+									<artifactId>jaxb-impl</artifactId>
+									<version>2.2</version>
+								</dependency>
+								<dependency>
+									<groupId>com.sun.xml.bind</groupId>
+									<artifactId>jaxb-xjc</artifactId>
+									<version>2.2</version>
+								</dependency>
+							</dependencies>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
 	<repositories>
 		<repository>
 			<id>spring-release</id>
@@ -415,11 +425,11 @@
 		</repository>
 	</repositories>
 	<pluginRepositories>
-	 <pluginRepository>
-	  <id>maven2-repository.dev.java.net</id>
-	  <name>Java.net Repository for Maven</name>
-	  <url>http://download.java.net/maven/2/</url>
-	  <layout>default</layout>
-	 </pluginRepository>
+		<pluginRepository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+			<layout>default</layout>
+		</pluginRepository>
 	</pluginRepositories>
 </project>
