--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring-framework.version>4.0.3.RELEASE</spring-framework.version>
 		<spring.security.version>3.2.2.RELEASE</spring.security.version>
 		<spring.security.oauth.version>2.0.0.M4</spring.security.oauth.version>
-
+		<spring.ws.version>2.2.0.RELEASE</spring.ws.version>
 		<!-- Hibernate / JPA -->
 		<hibernate.version>4.2.1.Final</hibernate.version>
 
@@ -187,6 +187,21 @@
 	        <artifactId>spring-security-config</artifactId>
 	        <version>${spring.security.version}</version>
 	    </dependency>		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
+			<version>${spring.ws.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.schema</groupId>
+			<artifactId>XmlSchema</artifactId>
+			<version>1.4.3</version>
+		</dependency>
 		 <dependency>
 			<groupId>net.sourceforge.jexcelapi</groupId>
 			<artifactId>jxl</artifactId>
@@ -302,24 +317,28 @@
 			                <goal>schemagen</goal>
 			            </goals>
 			            <phase>generate-resources</phase>
-			            
-			            <configuration>
-		                    <includes>
-		                    	<include>**\*.java</include>
-		                    </includes>			            
-						      <args>  
-						       <param>-npa</param>  
-						      </args>			            
-							<transformSchemas>
-								<transformSchema>
-									<uri>http://www.asicentral.com/schema/product</uri>
-									<toPrefix>asi</toPrefix>
-									<toFile>product.xsd</toFile>
-								</transformSchema>
-							</transformSchemas>			            	            
-			            </configuration>
 			        </execution>
-			    </executions>    
+			    </executions>  
+	            <configuration>
+	            	<args>  
+						<param>-npa</param>  
+					</args>
+					<outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/schema</outputDirectory>
+                    <includes>
+                    	<include>com/asi/service/product/vo/*</include>
+                    </includes>	
+                    <excludes>
+                    	<exclude>com/asi/service/product/vo/package-info.java</exclude>
+                    </excludes>	            
+					<transformSchemas>
+						<transformSchema>
+							<uri>http://www.asicentral.com/schema/product</uri>
+							<toPrefix>p</toPrefix>
+							<toFile>product.xsd</toFile>
+						</transformSchema>
+					</transformSchemas>
+					<verbose>true</verbose>		            	            
+	            </configuration>  
 			</plugin>        	
  	        <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -362,17 +381,19 @@
 						         </execution>
 						     </executions>
 						     <configuration>
-
+								<outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/schema</outputDirectory>
 						        <includes>
 						             <include>com/asi/service/product/vo/*.java</include>
 						        </includes>
 						        <schemas>
 						             <schema>
-						                 <namespace>http://www.asicentral.com/schema/product</namespace>
+						                 <uri>http://www.asicentral.com/schema/product</uri>
+						                 <toPrefix>p</toPrefix>
 						                 <file>product.xsd</file>
 						             </schema>
 						        </schemas>
 						        <verbose>true</verbose>
+						        
 						     </configuration>						     
 		                    <dependencies>
 		                        <dependency>
