--- a/pom.xml
+++ b/pom.xml
@@ -198,10 +198,16 @@
 			<version>${spring.ws.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.ws.commons.schema</groupId>
-			<artifactId>XmlSchema</artifactId>
-			<version>1.4.3</version>
+		    <groupId>org.apache.ws.xmlschema</groupId>
+		    <artifactId>xmlschema-core</artifactId>
+		    <version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>wsdl4j</groupId>
+			<artifactId>wsdl4j</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		
 		 <dependency>
 			<groupId>net.sourceforge.jexcelapi</groupId>
 			<artifactId>jxl</artifactId>
@@ -215,8 +221,7 @@
 		<dependency>
 		    <groupId>net.sf.supercsv</groupId>
 		    <artifactId>super-csv-dozer</artifactId>
-		    <version>2.1.0</version>
- 		    
+		    <version>2.1.0</version>		    
 		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
@@ -323,9 +328,10 @@
 	            	<args>  
 						<param>-npa</param>  
 					</args>
-					<outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/schema</outputDirectory>
+					<!-- <outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/schema</outputDirectory>  -->
                     <includes>
                     	<include>com/asi/service/product/vo/*</include>
+                    	<include>com/asi/service/ws/product/vo/*</include>
                     </includes>	
                     <excludes>
                     	<exclude>com/asi/service/product/vo/package-info.java</exclude>
