Adding dependencies for commons lib in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,11 @@
 								<artifactId>logback-core</artifactId>
 								<version>1.0.7</version>
 							</dependency>
+							<dependency>
+								<groupId>commons-lang</groupId>
+								<artifactId>commons-lang</artifactId>
+								<version>2.4</version>
+							</dependency>
 						</extraDependencies>
 					</configuration>
 				</plugin>
