Lookup Processing Changes

--- a/src/main/resources/stage/velocity-api.properties
+++ b/src/main/resources/stage/velocity-api.properties
@@ -9,6 +9,7 @@ lookup.currencies.url=http://stage-espupdates.asicentral.com/api/api/lookup/curr
 lookup.discount.rates.url=http://stage-espupdates.asicentral.com/api/api/lookup/discount_rates
 lookup.price.units.url=http://stage-espupdates.asicentral.com/api/api/lookup/price_units
 lookup.product.categories.url=http://stage-espupdates.asicentral.com/api/api/lookup/product_categories
+lookup.product.typecodes.url=http://stage-espupdates.asicentral.com/api/api/lookup/product_types
 lookup.product.shapes.url=http://stage-espupdates.asicentral.com/api/api/lookup/shapes
 lookup.product.themes.url=http://stage-espupdates.asicentral.com/api/api/lookup/themes
 lookup.product.keywords.url=http://stage-espupdates.asicentral.com/api/api/lookup/product_categories
