--- a/src/main/resources/velocity-import.properties
+++ b/src/main/resources/velocity-import.properties
@@ -7,6 +7,7 @@ lookup.currencies.url=${api.url}/api/api/lookup/currency
 lookup.discount.rates.url=${api.url}/api/api/lookup/discount_rates
 lookup.price.units.url=${api.url}/api/api/lookup/price_units
 lookup.product.categories.url=${api.url}/api/api/lookup/product_categories
+lookup.product.typecodes.url=${api.url}/api/api/lookup/product_types
 lookup.product.shapes.url=${api.url}/api/api/lookup/shapes
 lookup.product.themes.url=${api.url}/api/api/lookup/themes
 lookup.product.keywords.url=${api.url}/api/api/lookup/product_categories
