Fix for mediacitation issue.

--- a/src/main/resources/stage/velocity-api.properties
+++ b/src/main/resources/stage/velocity-api.properties
@@ -17,7 +17,7 @@ lookup.sizes.url=http://stage-espupdates.asicentral.com/api/api/lookup/sizes
 lookup.sizes.criteria.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria_attributes
 lookup.imprint.url=http://stage-espupdates.asicentral.com/api/api/lookup/imprint_methods
 lookup.imprint.artwork.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=IMPR
-lookup.media.citation.url=http://stage-espupdates.asinetwork.local/api/api/mediacitation?company_id=
+lookup.media.citation.url=http://stage-espupdates.asicentral.com/api/api/mediacitation?company_id=
 
 lookup.options.imprint.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=IMPR
 lookup.options.product.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=PROD
