Changing ProductImport to Product Controller for all the environment properties.

--- a/src/main/resources/dev/velocity-api.properties
+++ b/src/main/resources/dev/velocity-api.properties
@@ -1,7 +1,7 @@
 #
 #
 ## Main REST API URL
-ws.api.product.import=http://dev-espupdates.asinetwork.local/api/api/ProductImport/?
+ws.api.product.import=http://dev-espupdates.asinetwork.local/api/api/Product/?
 #Lookup URLs
 lookup.criteria.info.url=http://dev-espupdates.asinetwork.local/api/api/lookup/criteria_list
 lookup.orgin.url=http://dev-espupdates.asinetwork.local/api/api/lookup/origins
