--- a/src/main/resources/uat/velocity-api.properties
+++ b/src/main/resources/uat/velocity-api.properties
@@ -1,5 +1,5 @@
 ## Main REST API URL
-ws.api.product.import=http://uat-espupdates.asicentral.com/api/api/ProductImport/?
+ws.api.product.import=http://uat-espupdates.asicentral.com/api/api/Product/?
 #Lookup URLs
 lookup.criteria.info.url=http://uat-espupdates.asicentral.com/api/api/lookup/criteria_list
 lookup.orgin.url=http://uat-espupdates.asicentral.com/api/api/lookup/origins
