Lookups Based on AuthToken

--- a/src/main/resources/stage/velocity-api.properties
+++ b/src/main/resources/stage/velocity-api.properties
@@ -17,7 +17,7 @@ lookup.sizes.url=http://stage-espupdates.asicentral.com/api/api/lookup/sizes
 lookup.sizes.criteria.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria_attributes
 lookup.imprint.url=http://stage-espupdates.asicentral.com/api/api/lookup/imprint_methods
 lookup.imprint.artwork.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=IMPR
-lookup.media.citation.url=http://stage-espupdates.asicentral.com/api/api/mediacitation?company_id=
+lookup.media.citation.url=http://stage-espupdates.asicentral.com/api/api/mediacitation
 
 lookup.options.imprint.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=IMPR
 lookup.options.product.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=PROD
@@ -29,8 +29,8 @@ lookup.sizegroup.shipping.dimension.url=http://stage-espupdates.asicentral.com/a
 lookup.rustime.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=PRTM
 lookup.imprintcolor.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=COLR
 lookup.imprintsize.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=IMSZ
-lookup.product.selected.lines.url=http://stage-espupdates.asicentral.com/api/api/lookup/linenames?company_id=
-lookup.product.fob.points.url=http://stage-espupdates.asicentral.com/api/api/lookup/fob_points?company_id=
+lookup.product.selected.lines.url=http://stage-espupdates.asicentral.com/api/api/lookup/linenames
+lookup.product.fob.points.url=http://stage-espupdates.asicentral.com/api/api/lookup/fob_points
 
 lookup.safety.warnings.url=http://stage-espupdates.asicentral.com/api/api/lookup/safetywarnings
 lookup.pricing.subtypecode.url=http://stage-espupdates.asicentral.com/api/api/lookup/upcharge_types
