Added Following new features: - Create Batch: /batch/Create - Finalize Batch: /batch/Finalize

--- a/src/main/resources/velocity-import.properties
+++ b/src/main/resources/velocity-import.properties
@@ -4,6 +4,13 @@ ws.api.product.import=${api.url}/api/api/ExternalProduct/
 ## RADAR Login API URL to get the access token information
 ws.api.login=${api.url}/api/api/Login
 
+## RADAR Create Batch API endpoin
+ws.api.batch.create=${api.url}/api/api/ExternalBatch/CreateBatch
+
+## RADAR finalize Batch API endpoin
+ws.api.batch.finalize=${api.url}/api/api/ExternalBatch/FinalizeBatch
+
+
 
 lookup.color.url=${api.url}/api/api/lookup/colors
 lookup.material.url=${api.url}/api/api/lookup/materials
